Cp/uqic qiskit (#3916)
Adding qiskit implementations to John Watrous's BQI and FQA

---------

Co-authored-by: abbycross <across@us.ibm.com>

--- a/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/deutsch-jozsa-algorithm.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/deutsch-jozsa-algorithm.ipynb
@@ -171,8 +171,211 @@
     "To be specific, if we choose $k$ input strings $x^1,\\ldots,x^k \\in \\Sigma^n$ uniformly at random, evaluate $f(x^1),\\ldots,f(x^k),$ and answer $0$ if the function values are all the same, and $1$ if not, then we'll always be correct when $f$ is constant, and wrong in the case that $f$ is balanced with probability just $2^{-k + 1}.$\n",
     "If we take $k = 11,$ for instance, this algorithm will answer correctly with probability greater than $99.9$%.\n",
     "\n",
-    "For this reason, we do still have a rather modest advantage of quantum over classical algorithms — but it is nevertheless a quantifiable advantage representing an improvement over Deutsch's algorithm.\n",
+    "For this reason, we do still have a rather modest advantage of quantum over classical algorithms — but it is nevertheless a quantifiable advantage representing an improvement over Deutsch's algorithm."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83b0e8b5",
+   "metadata": {},
+   "source": [
+    "## Deutsch-Jozsa with Qiskit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c7839d8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qiskit import QuantumCircuit\n",
+    "from qiskit_aer import AerSimulator\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59738a5c",
+   "metadata": {},
+   "source": [
+    "To implement the Deutsch-Jozsa algorithm in Qiskit, we'll start by defining a function `dj_query` that generates a quantum circuit implementing a query gate, for a randomly selected function satisfying the promise for the Deutsch-Jozsa problem.\n",
+    "With a 50% chance, the function is constant, and with 50% change the function is balanced.\n",
+    "For each of those two possibilities, the function is selected uniformly from the functions of that type.\n",
+    "The argument is the number of input bits of the function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b39e7af8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dj_query(num_qubits):\n",
+    "    # Create a circuit implementing for a query gate for a random function\n",
+    "    # satisfying the promise for the Deutsch-Jozsa problem.\n",
     "\n",
+    "    qc = QuantumCircuit(num_qubits + 1)\n",
+    "\n",
+    "    if np.random.randint(0, 2):\n",
+    "        # Flip output qubit with 50% chance\n",
+    "        qc.x(num_qubits)\n",
+    "    if np.random.randint(0, 2):\n",
+    "        # return constant circuit with 50% chance\n",
+    "        return qc\n",
+    "\n",
+    "    # Choose half the possible input strings\n",
+    "    on_states = np.random.choice(\n",
+    "        range(2**num_qubits),  # numbers to sample from\n",
+    "        2**num_qubits // 2,  # number of samples\n",
+    "        replace=False,  # makes sure states are only sampled once\n",
+    "    )\n",
+    "\n",
+    "    def add_cx(qc, bit_string):\n",
+    "        for qubit, bit in enumerate(reversed(bit_string)):\n",
+    "            if bit == \"1\":\n",
+    "                qc.x(qubit)\n",
+    "        return qc\n",
+    "\n",
+    "    for state in on_states:\n",
+    "        qc.barrier()  # Barriers are added to help visualize how the functions are created.\n",
+    "        qc = add_cx(qc, f\"{state:0b}\")\n",
+    "        qc.mcx(list(range(num_qubits)), num_qubits)\n",
+    "        qc = add_cx(qc, f\"{state:0b}\")\n",
+    "\n",
+    "    qc.barrier()\n",
+    "\n",
+    "    return qc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60b36f11",
+   "metadata": {},
+   "source": [
+    "We can show the quantum circuit implementation of the query gate using the `draw` method as usual."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b4a6df3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Image src=\"/learning/images/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/deutsch-jozsa-algorithm/extracted-outputs/b4a6df3d-0.avif\" alt=\"Output of the previous code cell\" />"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(dj_query(3).draw(output=\"mpl\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ed6dd43",
+   "metadata": {},
+   "source": [
+    "Next we define a function that creates the Deutsch-Jozsa circuit, taking a quantum circuit implementation of a query gate as an argument."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "79ab8817",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compile_circuit(function: QuantumCircuit):\n",
+    "    # Compiles a circuit for use in the Deutsch-Jozsa algorithm.\n",
+    "\n",
+    "    n = function.num_qubits - 1\n",
+    "    qc = QuantumCircuit(n + 1, n)\n",
+    "    qc.x(n)\n",
+    "    qc.h(range(n + 1))\n",
+    "    qc.compose(function, inplace=True)\n",
+    "    qc.h(range(n))\n",
+    "    qc.measure(range(n), range(n))\n",
+    "    return qc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71c07df9",
+   "metadata": {},
+   "source": [
+    "Finally, a function that runs the Deutsch-Jozsa circuit once is defined."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "8a6cf538",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dj_algorithm(function: QuantumCircuit):\n",
+    "    # Determine if a function is constant or balanced.\n",
+    "\n",
+    "    qc = compile_circuit(function)\n",
+    "\n",
+    "    result = AerSimulator().run(qc, shots=1, memory=True).result()\n",
+    "    measurements = result.get_memory()\n",
+    "    if \"1\" in measurements[0]:\n",
+    "        return \"balanced\"\n",
+    "    return \"constant\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49113ebf",
+   "metadata": {},
+   "source": [
+    "We can test our implementation by choosing a function randomly, displaying the quantum circuit implementation of a query gate for this function, and then running the Deutsch-Jozsa algorithm on that function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "aca4745e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Image src=\"/learning/images/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/deutsch-jozsa-algorithm/extracted-outputs/aca4745e-0.avif\" alt=\"Output of the previous code cell\" />"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'balanced'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "f = dj_query(3)\n",
+    "display(f.draw(\"mpl\"))\n",
+    "display(dj_algorithm(f))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89e58116",
+   "metadata": {},
+   "source": [
     "## The Bernstein-Vazirani problem\n",
     "\n",
     "Next, we'll discuss a problem known as the *Bernstein-Vazirani problem*.\n",
@@ -325,8 +528,90 @@
     "Each classical query reveals a single bit of information about the solution, and there are $n$ bits of information that need to be uncovered — so at least $n$ queries are needed.\n",
     "\n",
     "It is, in fact, possible to solve the Bernstein-Vazirani problem classically by querying the function on each of the $n$ strings having a single $1,$ in each possible position, and $0$ for all other bits, which reveals the bits of $s$ one at a time.\n",
-    "So, the advantage of quantum over classical algorithms for this problem is $1$ query versus $n$ queries.\n",
+    "Therefore, the advantage of quantum over classical algorithms for this problem is $1$ query versus $n$ queries."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28583734",
+   "metadata": {},
+   "source": [
+    "## Bernstein-Vazirani with Qiskit\n",
     "\n",
+    "We've already implemented the Deutsch-Jozsa circuit above, and here we will make use of it to solve the Bernstein-Vazirani problem.\n",
+    "First we'll define a function that implements a query gate for the Bernstein-Vazirani problem given any binary string $s.$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "11861a7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Image src=\"/learning/images/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/deutsch-jozsa-algorithm/extracted-outputs/11861a7e-0.avif\" alt=\"Output of the previous code cell\" />"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def bv_query(s):\n",
+    "    # Create a quantum circuit implementing a query gate for the\n",
+    "    # Bernstein-Vazirani problem.\n",
+    "\n",
+    "    qc = QuantumCircuit(len(s) + 1)\n",
+    "    for index, bit in enumerate(reversed(s)):\n",
+    "        if bit == \"1\":\n",
+    "            qc.cx(index, len(s))\n",
+    "    return qc\n",
+    "\n",
+    "\n",
+    "display(bv_query(\"1011\").draw(output=\"mpl\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c24e91e8",
+   "metadata": {},
+   "source": [
+    "Now we can create a function that runs the Deutsch-Jozsa circuit on the function, using the `compile_circuit` function that was defined previously."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "7db2ea99",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1011'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def bv_algorithm(function: QuantumCircuit):\n",
+    "    qc = compile_circuit(function)\n",
+    "    result = AerSimulator().run(qc, shots=1, memory=True).result()\n",
+    "    return result.get_memory()[0]\n",
+    "\n",
+    "\n",
+    "display(bv_algorithm(bv_query(\"1011\")))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86c52e37",
+   "metadata": {},
+   "source": [
     "### Remark on nomenclature\n",
     "\n",
     "In the context of the Bernstein-Vazirani problem, it is common that the Deutsch-Jozsa algorithm is referred to as the \"Bernstein-Vazirani algorithm.\"\n",
