Fix linting transverse-field-ising-model.ipynb

--- a/docs/tutorials/transverse-field-ising-model.ipynb
+++ b/docs/tutorials/transverse-field-ising-model.ipynb
@@ -108,9 +108,9 @@
     "catalog = QiskitFunctionsCatalog(\n",
     "    channel=\"ibm_quantum_platform\", instance=instance, token=token\n",
     ")\n",
-    " \n",
+    "\n",
     "# Access Function\n",
-    "perf_mgmt = catalog.load(\"q-ctrl/performance-management\")\n"
+    "perf_mgmt = catalog.load(\"q-ctrl/performance-management\")"
    ]
   },
   {
@@ -136,12 +136,12 @@
     "    \"\"\"\n",
     "    Generate the adjacency matrix for 'n' connected triangles in a chain.\n",
     "    \"\"\"\n",
-    "    num_nodes = 2 * n + 1  \n",
+    "    num_nodes = 2 * n + 1\n",
     "    adj_matrix = np.zeros((num_nodes, num_nodes), dtype=int)\n",
     "\n",
     "    for i in range(n):\n",
     "        a, b, c = i * 2, i * 2 + 1, i * 2 + 2  # Nodes of the current triangle\n",
-    "        \n",
+    "\n",
     "        # Connect the three nodes in a triangle\n",
     "        adj_matrix[a, b] = adj_matrix[b, a] = 1\n",
     "        adj_matrix[b, c] = adj_matrix[c, b] = 1\n",
@@ -195,10 +195,16 @@
     "    # Draw\n",
     "    fig, ax = plt.subplots(figsize=(1.5 * n, 2.5))\n",
     "    nx.draw(\n",
-    "        G, pos, ax=ax,\n",
-    "        with_labels=True, font_size=10,font_color=\"white\",\n",
-    "        node_size=600, node_color=qv.QCTRL_STYLE_COLORS[0],\n",
-    "        edge_color=\"black\", width=2\n",
+    "        G,\n",
+    "        pos,\n",
+    "        ax=ax,\n",
+    "        with_labels=True,\n",
+    "        font_size=10,\n",
+    "        font_color=\"white\",\n",
+    "        node_size=600,\n",
+    "        node_color=qv.QCTRL_STYLE_COLORS[0],\n",
+    "        edge_color=\"black\",\n",
+    "        width=2,\n",
     "    )\n",
     "    ax.set_aspect(\"equal\")\n",
     "    ax.margins(0.2)\n",
@@ -233,8 +239,8 @@
     }
    ],
    "source": [
-    "n_triangles = 17#17\n",
-    "n_qubits = 2*n_triangles+1\n",
+    "n_triangles = 17  # 17\n",
+    "n_qubits = 2 * n_triangles + 1\n",
     "plot_triangle_chain(n_triangles, side=1.0)\n",
     "plt.show()"
    ]
@@ -262,7 +268,7 @@
     "    \"\"\"\n",
     "    line_graph = nx.line_graph(graph)\n",
     "    edge_colors = nx.coloring.greedy_color(line_graph)\n",
-    "    \n",
+    "\n",
     "    color_groups = {}\n",
     "    for edge, color in edge_colors.items():\n",
     "        if color not in color_groups:\n",
@@ -502,18 +508,21 @@
    "source": [
     "backend_sim = AerSimulator(method=\"matrix_product_state\")\n",
     "\n",
-    "def normalize_counts(counts_list, shots) :\n",
+    "\n",
+    "def normalize_counts(counts_list, shots):\n",
     "    new_counts_list = []\n",
     "    for counts in counts_list:\n",
     "        a = {k: v / shots for k, v in counts.items()}\n",
     "        new_counts_list.append(a)\n",
     "    return new_counts_list\n",
     "\n",
+    "\n",
     "def run_sim(circ_list):\n",
     "    shots = 4096\n",
-    "    res = backend_sim.run(circ_list, shots= shots)\n",
+    "    res = backend_sim.run(circ_list, shots=shots)\n",
     "    normed = normalize_counts(res.result().get_counts(), shots)\n",
     "    return normed\n",
+    "\n",
     "\n",
     "sim_counts = run_sim(circs)"
    ]
@@ -526,23 +535,25 @@
    "outputs": [],
    "source": [
     "def make_correlators(test_counts, nq, d_ind_tot):\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    d_ind_tot : max_depth\n",
-    "    '''\n",
-    "    mz = np.empty((nq, d_ind_tot))       # <Z_i>\n",
+    "    \"\"\"\n",
+    "    mz = np.empty((nq, d_ind_tot))  # <Z_i>\n",
     "    # zzij = np.empty((nq, nq, d_ind_tot)) # <Z_i Z_j>\n",
     "\n",
     "    for d_ind in range(d_ind_tot):\n",
     "        counts = test_counts[d_ind]\n",
     "        for i in range(nq):\n",
-    "            mz[i,d_ind] = z_expectation(counts, i)\n",
+    "            mz[i, d_ind] = z_expectation(counts, i)\n",
     "    return mz\n",
     "\n",
+    "\n",
     "def make_cors(counts, nq):\n",
-    "    d_ind_tot=21\n",
+    "    d_ind_tot = 21\n",
     "    mz = make_correlators(counts, nq, d_ind_tot=d_ind_tot)\n",
     "    average_z = np.mean(mz, axis=0)\n",
-    "    return np.concatenate((np.array([1]),average_z), axis=0)\n",
+    "    return np.concatenate((np.array([1]), average_z), axis=0)\n",
+    "\n",
     "\n",
     "sim_exp = make_cors(sim_counts[0:21], nq=nq)"
    ]
@@ -573,7 +584,7 @@
     "    primitive=\"estimator\",\n",
     "    pubs=estimator_pubs,\n",
     "    backend_name=backend_name,\n",
-    "    options={\"default_shots\": 16384}\n",
+    "    options={\"default_shots\": 16384},\n",
     ")"
    ]
   },
@@ -615,7 +626,7 @@
    "outputs": [],
    "source": [
     "real_exp = [ev.data.evs for ev in result[:]]\n",
-    "real_exp_mean = np.concatenate((np.array([1]),np.mean(real_exp, axis=1)), axis=0)"
+    "real_exp_mean = np.concatenate((np.array([1]), np.mean(real_exp, axis=1)), axis=0)"
    ]
   },
   {
@@ -635,34 +646,61 @@
    "outputs": [],
    "source": [
     "def make_expectations_plot(exp_z, exp_z_error, sim_z, depths, name):\n",
-    "    \n",
+    "\n",
     "    plot_upto = 21\n",
     "    plot_from = 0\n",
     "    depth_ticks = [0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20]\n",
     "\n",
     "    # depth_ticks = [10, 12, 14, 16, 18, 20]\n",
     "    sim_z = sim_z\n",
-    "    fig, ax = plt.subplots(1, 1, figsize=(6, 4), dpi=300)  \n",
+    "    fig, ax = plt.subplots(1, 1, figsize=(6, 4), dpi=300)\n",
     "    top = np.max(sim_z[plot_from:plot_upto])\n",
     "    bottom = np.min(sim_z[plot_from:plot_upto])\n",
     "    top = 1.05\n",
     "    bottom = -1.05\n",
-    "    \n",
-    "    ax.plot(depths[plot_from:plot_upto], sim_z[plot_from:plot_upto], color='grey', label='Noiseless simulation')\n",
-    "    # ax.hlines([0], 10, 20, color=\"black\", linestyles='dashed', label = \"The random limit\")\n",
-    "    \n",
-    "    if name == 'qctrl':\n",
-    "        ax.errorbar(depths[plot_from:plot_upto], exp_z[plot_from:plot_upto], yerr=exp_z_error[plot_from:plot_upto], fmt='o', markersize=7, color='#680CE9', label='Fire Opal', alpha=0.7, capsize=4, capthick=1)\n",
-    "    elif name == 'estimator':\n",
-    "        ax.errorbar(depths[plot_from:plot_upto], exp_z[plot_from:plot_upto], yerr=exp_z_error[plot_from:plot_upto], fmt='o', markersize=7, color='black', label='Default QiskitRuntime', alpha=0.7, capsize=4, capthick=1)\n",
     "\n",
-    "    ax.set_ylabel(r'$\\langle Z \\rangle$')\n",
+    "    ax.plot(\n",
+    "        depths[plot_from:plot_upto],\n",
+    "        sim_z[plot_from:plot_upto],\n",
+    "        color=\"grey\",\n",
+    "        label=\"Noiseless simulation\",\n",
+    "    )\n",
+    "    # ax.hlines([0], 10, 20, color=\"black\", linestyles='dashed', label = \"The random limit\")\n",
+    "\n",
+    "    if name == \"qctrl\":\n",
+    "        ax.errorbar(\n",
+    "            depths[plot_from:plot_upto],\n",
+    "            exp_z[plot_from:plot_upto],\n",
+    "            yerr=exp_z_error[plot_from:plot_upto],\n",
+    "            fmt=\"o\",\n",
+    "            markersize=7,\n",
+    "            color=\"#680CE9\",\n",
+    "            label=\"Fire Opal\",\n",
+    "            alpha=0.7,\n",
+    "            capsize=4,\n",
+    "            capthick=1,\n",
+    "        )\n",
+    "    elif name == \"estimator\":\n",
+    "        ax.errorbar(\n",
+    "            depths[plot_from:plot_upto],\n",
+    "            exp_z[plot_from:plot_upto],\n",
+    "            yerr=exp_z_error[plot_from:plot_upto],\n",
+    "            fmt=\"o\",\n",
+    "            markersize=7,\n",
+    "            color=\"black\",\n",
+    "            label=\"Default QiskitRuntime\",\n",
+    "            alpha=0.7,\n",
+    "            capsize=4,\n",
+    "            capthick=1,\n",
+    "        )\n",
+    "\n",
+    "    ax.set_ylabel(r\"$\\langle Z \\rangle$\")\n",
     "    ax.set_xticks(depth_ticks)\n",
-    "    ax.set_xlabel('Trotter step')\n",
+    "    ax.set_xlabel(\"Trotter step\")\n",
     "    ax.legend()\n",
     "\n",
-    "    ax.set_ylim(bottom , top)\n",
-    "    ax.legend(prop={'size': 8})\n",
+    "    ax.set_ylim(bottom, top)\n",
+    "    ax.legend(prop={\"size\": 8})\n",
     "\n",
     "    # fig.suptitle(f'Nq = {nq}')\n",
     "    plt.tight_layout()\n",
@@ -676,7 +714,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "depths = list(range(d_ind_tot + 1 ))\n",
+    "depths = list(range(d_ind_tot + 1))\n",
     "errors = np.abs(np.array(real_exp_mean[:-3]) - np.array(sim_exp[:-3]))"
    ]
   },
@@ -698,7 +736,7 @@
     }
    ],
    "source": [
-    "make_expectations_plot(real_exp_mean[:-3], errors, sim_exp[:-3], depths[:-3], 'qctrl')"
+    "make_expectations_plot(real_exp_mean[:-3], errors, sim_exp[:-3], depths[:-3], \"qctrl\")"
    ]
   },
   {
