--- a/docs/tutorials/transverse-field-ising-model.ipynb
+++ b/docs/tutorials/transverse-field-ising-model.ipynb
@@ -762,7 +762,7 @@
   }
  ],
  "metadata": {
-  "description": "TODO - description for SEO between 50 and 160 characters",
+  "description": "Build and solve the transverse-field Ising model using Fire Opal and Qiskit",
   "kernelspec": {
    "display_name": "qiskit",
    "language": "python",
@@ -780,7 +780,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.12.9"
   },
-  "title": "TODO - The title of your tutorial"
+  "title": "Transverse-field Ising Model Simulation"
  },
  "nbformat": 4,
  "nbformat_minor": 5
