reorganize page content

--- a/docs/guides/save-jobs.ipynb
+++ b/docs/guides/save-jobs.ipynb
@@ -34,8 +34,19 @@
    "id": "923e6db4-89e1-4e1d-a526-a42454a4c238",
    "metadata": {},
    "source": [
-    "Quantum workflows often take a while to complete and can run over many sessions. Restarting your Python kernel means you'll lose any results stored in memory. To avoid loss of data, you can save results to file and retrieve results of past jobs from IBM Quantum so your next session can continue where you left off."
+    "This guide focuses on best practices in retrieving and managing your job results, so that you can better organize and understand your experiments. \n",
+    "\n",
+    "You can assign tags to your jobs when you run them so that you can filter by a tag later. Example uses for job tags include particular error mitigation settings, circuit parameters, and so forth.\n",
+    "\n",
+    "Quantum workflows often take a while to complete and can run over many sessions. Restarting your Python kernel means you'll lose any results stored in memory. To avoid loss of data, you can save results to file and retrieve results of past jobs from IBM Quantum&reg; so your next session can continue where you left off.\n",
+    "\n",
+    "The following sections provide more details and examples."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
