update some images with neutral backgrounds

--- a/learning/courses/utility-scale-quantum-computing/variational-quantum-algorithms.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/variational-quantum-algorithms.ipynb
@@ -1304,7 +1304,7 @@
    "id": "ca09d6bf-e421-4ada-9515-1f69687bb511",
    "metadata": {},
    "source": [
-    "![\"QAOA\"](/learning/images/courses/utility-scale-quantum-computing/variational-quantum-algorithms/qaoa.avif)"
+    "![\"QAOA circuit diagram\"](/learning/images/courses/utility-scale-quantum-computing/variational-quantum-algorithms/circuit-diagram.svg)"
    ]
   },
   {
