--- a/docs/guides/save-credentials.mdx
+++ b/docs/guides/save-credentials.mdx
@@ -1,6 +1,6 @@
 ---
 title: Save your login credentials
-description: Save your login credentials insetad of manually entering them
+description: Save your login credentials instead of manually entering them
 ---
 
 # Save your login credentials
