Generate C API 2.2.0 latest

--- a/docs/api/qiskit-c/qk-obs-term.mdx
+++ b/docs/api/qiskit-c/qk-obs-term.mdx
@@ -34,7 +34,7 @@ This is a group of functions for interacting with an opaque (Rust-space) SparseT
     The coefficient of the observable term.
   </Attribute>
 
-  #### uintptr\_t len
+  #### size\_t len
 
   <Attribute id="len">
     Length of the `bit_terms` and `indices` arrays.
@@ -66,7 +66,7 @@ This is a group of functions for interacting with an opaque (Rust-space) SparseT
 <Function id="qk_obsterm_str" signature="char *qk_obsterm_str(const QkObsTerm *term)">
   Return a string representation of the sparse term.
 
-  <span id="group__QkObsTerm_1autotoc_md89" />
+  <span id="group__QkObsTerm_1autotoc_md91" />
 
   #### Example
 
@@ -78,11 +78,11 @@ This is a group of functions for interacting with an opaque (Rust-space) SparseT
   qk_str_free(string);
   ```
 
-  <span id="group__QkObsTerm_1autotoc_md90" />
+  <span id="group__QkObsTerm_1autotoc_md92" />
 
   #### Safety
 
-  <span id="group__QkObsTerm_1autotoc_md90" />
+  <span id="group__QkObsTerm_1autotoc_md92" />
 
   Behavior is undefined `term` is not a valid, non-null pointer to a `QkObsTerm`.
 
