--- a/docs/api/qiskit-c/qk-obs.mdx
+++ b/docs/api/qiskit-c/qk-obs.mdx
@@ -72,26 +72,26 @@ These cases are not special, they’re fully consistent with the rules and shoul
 
 For any given mathematical observable, there are several ways of representing it with `QkObs`. For example, the same set of single-bit terms and their corresponding indices might appear multiple times in the observable. Mathematically, this is equivalent to having only a single term with all the coefficients summed. Similarly, the terms of the sum in a `QkObs` can be in any order while representing the same observable, since addition is commutative (although while floating-point addition is not associative, `QkObs` makes no guarantees about the summation order).
 
-These two categories of representation degeneracy can cause the operator equality, `qk_obs_equal`, to claim that two observables are not equal, despite representating the same object. In these cases, it can be convenient to define some *canonical form*, which allows observables to be compared structurally. You can put a `QkObs` in canonical form by using the `qk_obs_canonicalize` function. The precise ordering of terms in canonical ordering is not specified, and may change between versions of Qiskit. Within the same version of Qiskit, however, you can compare two observables structurally by comparing their simplified forms.
+These two categories of representation degeneracy can cause the operator equality, `qk_obs_equal`, to claim that two observables are not equal, despite representing the same object. In these cases, it can be convenient to define some *canonical form*, which allows observables to be compared structurally. You can put a `QkObs` in canonical form by using the `qk_obs_canonicalize` function. The precise ordering of terms in canonical ordering is not specified, and may change between versions of Qiskit. Within the same version of Qiskit, however, you can compare two observables structurally by comparing their simplified forms.
 
 <Admonition title="Note" type="note">
   If you wish to account for floating-point tolerance in the comparison, it is safest to use a recipe such as:
 
   ```c
   bool equivalent(QkObs *left, QkObs *right, double tol) {
-      // compare a canonicalized version of left - right to the zero observable
-      QkObs *neg_right = qk_obs_mul(right, -1);
-      QkObs *diff = qk_obs_add(left, neg_right);
-      QkObs *canonical = qk_obs_canonicalize(diff, tol);
+    // compare a canonicalized version of left - right to the zero observable
+    QkObs *neg_right = qk_obs_multiply(right, &(QkComplex64){-1, 0});
+    QkObs *diff = qk_obs_add(left, neg_right);
+    QkObs *canonical = qk_obs_canonicalize(diff, tol);
 
-      QkObs *zero = qk_obs_zero(qk_obs_num_qubits(left));
-      bool equiv = qk_obs_equal(diff, zero);
-      // free all temporary variables
-      qk_obs_free(neg_right);
-      qk_obs_free(diff);
-      qk_obs_free(canonical);
-      qk_obs_free(zero);
-      return equiv;
+    QkObs *zero = qk_obs_zero(qk_obs_num_qubits(left));
+    bool equiv = qk_obs_equal(diff, zero);
+    // free all temporary variables
+    qk_obs_free(neg_right);
+    qk_obs_free(diff);
+    qk_obs_free(canonical);
+    qk_obs_free(zero);
+    return equiv;
   }
   ```
 </Admonition>
@@ -185,7 +185,7 @@ for (size_t i = 0; i < num_terms; i++) {
 
 ### qk\_obs\_new
 
-<Function id="qk_obs_new" signature="QkObs *qk_obs_new(uint32_t num_qubits, uint64_t num_terms, uint64_t num_bits, QkComplex64 *coeffs, QkBitTerm *bit_terms, uint32_t *indices, uintptr_t *boundaries)">
+<Function id="qk_obs_new" signature="QkObs *qk_obs_new(uint32_t num_qubits, uint64_t num_terms, uint64_t num_bits, QkComplex64 *coeffs, QkBitTerm *bit_terms, uint32_t *indices, size_t *boundaries)">
   Construct a new observable from raw data.
 
   <span id="group__QkObs_1autotoc_md50" />
@@ -197,14 +197,13 @@ for (size_t i = 0; i < num_terms; i++) {
   uint32_t num_qubits = 100;
   uint64_t num_terms = 2;  // we have 2 terms: |01><01|, -1 * |+-><+-|
   uint64_t num_bits = 4; // we have 4 non-identity bits: 0, 1, +, -
-
-  complex double coeffs[2] = {1, -1};
+  QkComplex64 coeffs = {1, -1};
   QkBitTerm bits[4] = {QkBitTerm_Zero, QkBitTerm_One, QkBitTerm_Plus, QkBitTerm_Minus};
+
   uint32_t indices[4] = {0, 1, 98, 99};  // <-- e.g. {1, 0, 99, 98} would be invalid
   size_t boundaries[3] = {0, 2, 4};
-
   QkObs *obs = qk_obs_new(
-      num_qubits, num_terms, num_bits, coeffs, bits, indices, boundaries
+      num_qubits, num_terms, num_bits, &coeffs, bits, indices, boundaries
   );
   ```
 
@@ -216,7 +215,7 @@ for (size_t i = 0; i < num_terms; i++) {
 
   Behavior is undefined if any of the following conditions are violated:
 
-  *   `coeffs` is a pointer to a `complex double` array of length `num_terms`
+  *   `coeffs` is a pointer to a `QkComplex64` array of length `num_terms`
   *   `bit_terms` is a pointer to an array of valid `QkBitTerm` elements of length `num_bits`
   *   `indices` is a pointer to a `uint32_t` array of length `num_bits`, which is term-wise sorted in strict ascending order, and every element is smaller than `num_qubits`
   *   `boundaries` is a pointer to a `size_t` array of length `num_terms + 1`, which is sorted in ascending order, the first element is 0 and the last element is smaller than `num_terms`
@@ -276,10 +275,10 @@ for (size_t i = 0; i < num_terms; i++) {
   uint32_t num_qubits = 100;
   QkObs *obs = qk_obs_zero(num_qubits);
 
-  complex double coeff = 1;
+  QkComplex64 coeff = {1, 0};
   QkBitTerm bit_terms[3] = {QkBitTerm_X, QkBitTerm_Y, QkBitTerm_Z};
   uint32_t indices[3] = {0, 1, 2};
-  QkObsTerm term = {&coeff, 3, bit_terms, indices, num_qubits};
+  QkObsTerm term = {coeff, 3, bit_terms, indices, num_qubits};
 
   int exit_code = qk_obs_add_term(obs, &term);
   ```
@@ -348,7 +347,7 @@ for (size_t i = 0; i < num_terms; i++) {
 
 ### qk\_obs\_num\_terms
 
-<Function id="qk_obs_num_terms" signature="uintptr_t qk_obs_num_terms(const QkObs *obs)">
+<Function id="qk_obs_num_terms" signature="size_t qk_obs_num_terms(const QkObs *obs)">
   Get the number of terms in the observable.
 
   <span id="group__QkObs_1autotoc_md58" />
@@ -410,7 +409,7 @@ for (size_t i = 0; i < num_terms; i++) {
 
 ### qk\_obs\_len
 
-<Function id="qk_obs_len" signature="uintptr_t qk_obs_len(const QkObs *obs)">
+<Function id="qk_obs_len" signature="size_t qk_obs_len(const QkObs *obs)">
   Get the number of bit terms/indices in the observable.
 
   <span id="group__QkObs_1autotoc_md62" />
@@ -444,7 +443,7 @@ for (size_t i = 0; i < num_terms; i++) {
 <Function id="qk_obs_coeffs" signature="QkComplex64 *qk_obs_coeffs(QkObs *obs)">
   Get a pointer to the coefficients.
 
-  This can be used to read and modify the observable’s coefficients. The resulting pointer is valid to read for `qk_obs_num_terms(obs)` elements of `complex double`.
+  This can be used to read and modify the observable’s coefficients. The resulting pointer is valid to read for `qk_obs_num_terms(obs)` elements of `QkComplex64`.
 
   <span id="group__QkObs_1autotoc_md64" />
 
@@ -453,10 +452,10 @@ for (size_t i = 0; i < num_terms; i++) {
   ```c
   QkObs *obs = qk_obs_identity(100);
   size_t num_terms = qk_obs_num_terms(obs);
-  complex double *coeffs = qk_obs_coeffs(obs);
+  QkComplex64 *coeffs = qk_obs_coeffs(obs);
 
   for (size_t i = 0; i < num_terms; i++) {
-      printf("%f + i%f\n", creal(coeffs[i]), cimag(coeffs[i]));
+      printf("%f + i%f\n", coeffs[i].re, coeffs[i].im);
   }
   ```
 
@@ -488,14 +487,16 @@ for (size_t i = 0; i < num_terms; i++) {
 
   #### Example
 
+  <span id="group__QkObs_1autotoc_md66" />
+
   ```c
   uint32_t num_qubits = 100;
   QkObs *obs = qk_obs_zero(num_qubits);
 
-  complex double coeff = 1;
+  QkComplex64 coeff = {1, 0};
   QkBitTerm bit_terms[3] = {QkBitTerm_X, QkBitTerm_Y, QkBitTerm_Z};
-  uint32_t indices[3] = {0, 1, 2};
-  QkObsTerm term = {&coeff, 3, bit_terms, indices, num_qubits};
+  uint32_t term_indices[3] = {0, 1, 2};
+  QkObsTerm term = {coeff, 3, bit_terms, term_indices, num_qubits};
   qk_obs_add_term(obs, &term);
 
   size_t len = qk_obs_len(obs);
@@ -504,7 +505,9 @@ for (size_t i = 0; i < num_terms; i++) {
   for (size_t i = 0; i < len; i++) {
       printf("index %i: %i\n", i, indices[i]);
   }
+  ```
 
+  ```c
   qk_obs_free(obs);
   ```
 
@@ -527,7 +530,7 @@ for (size_t i = 0; i < num_terms; i++) {
 
 ### qk\_obs\_boundaries
 
-<Function id="qk_obs_boundaries" signature="uintptr_t *qk_obs_boundaries(QkObs *obs)">
+<Function id="qk_obs_boundaries" signature="size_t *qk_obs_boundaries(QkObs *obs)">
   Get a pointer to the term boundaries.
 
   This can be used to read and modify the observable’s term boundaries. The resulting pointer is valid to read for `qk_obs_num_terms(obs) + 1` elements of size `size_t`.
@@ -540,14 +543,14 @@ for (size_t i = 0; i < num_terms; i++) {
   uint32_t num_qubits = 100;
   QkObs *obs = qk_obs_zero(num_qubits);
 
-  complex double coeff = 1;
+  QkComplex64 coeff = {1, 0};
   QkBitTerm bit_terms[3] = {QkBitTerm_X, QkBitTerm_Y, QkBitTerm_Z};
   uint32_t indices[3] = {0, 1, 2};
-  QkObsTerm term = {&coeff, 3, bit_terms, indices, num_qubits};
+  QkObsTerm term = {coeff, 3, bit_terms, indices, num_qubits};
   qk_obs_add_term(obs, &term);
 
   size_t num_terms = qk_obs_num_terms(obs);
-  uint32_t *boundaries = qk_obs_boundaries(obs);
+  size_t *boundaries = qk_obs_boundaries(obs);
 
   for (size_t i = 0; i < num_terms + 1; i++) {
       printf("boundary %i: %i\n", i, boundaries[i]);
@@ -586,10 +589,10 @@ for (size_t i = 0; i < num_terms; i++) {
   uint32_t num_qubits = 100;
   QkObs *obs = qk_obs_zero(num_qubits);
 
-  complex double coeff = 1;
+  QkComplex64 coeff = {1, 0};
   QkBitTerm bit_terms[3] = {QkBitTerm_X, QkBitTerm_Y, QkBitTerm_Z};
   uint32_t indices[3] = {0, 1, 2};
-  QkObsTerm term = {&coeff, 3, bit_terms, indices, num_qubits};
+  QkObsTerm term = {coeff, 3, bit_terms, indices, num_qubits};
   qk_obs_add_term(obs, &term);
 
   size_t len = qk_obs_len(obs);
@@ -630,7 +633,7 @@ for (size_t i = 0; i < num_terms; i++) {
 
   ```c
   QkObs *obs = qk_obs_identity(100);
-  complex double coeff = 2;
+  QkComplex64 coeff = {2, 0};
   QkObs *result = qk_obs_multiply(obs, &coeff);
   ```
 
@@ -643,7 +646,7 @@ for (size_t i = 0; i < num_terms; i++) {
   Behavior is undefined if any of the following is violated
 
   *   `obs` is a valid, non-null pointer to a `QkObs`
-  *   `coeff` is a valid, non-null pointer to a `complex double`
+  *   `coeff` is a valid, non-null pointer to a `QkComplex64`
 
   **Parameters**
 
@@ -756,12 +759,83 @@ for (size_t i = 0; i < num_terms; i++) {
   `first.compose(second)` which equals the observable `result = second @ first`, in terms of the matrix multiplication `@`.
 </Function>
 
+### qk\_obs\_apply\_layout
+
+<Function id="qk_obs_apply_layout" signature="QkExitCode qk_obs_apply_layout(QkObs *obs, const uint32_t *layout, uint32_t num_qubits)">
+  Apply a new qubit layout to the observable.
+
+  The layout is set by an array `layout` of new indices, specifying that qubit at current index `i` is relabelled to index `layout[i]`. The number of qubits the observable acts on can be extended by setting a larger `num_qubits` than the current observable has.
+
+  <span id="group__QkObs_1autotoc_md80" />
+
+  #### Example
+
+  <span id="group__QkObs_1autotoc_md80" />
+
+  This interface allows to relabel and extend the qubit indices:
+
+  ```c
+  QkObs *obs = qk_obs_zero(4);
+
+  // add a term to the observable
+  QkBitTerm bit_terms[3] = {QkBitTerm_X, QkBitTerm_Y, QkBitTerm_Z};
+  uint32_t qubits[3] = {1, 2, 3};
+  complex double coeff = 1;
+  QkObsTerm term = {coeff, 3, bit_terms, qubits, 4};
+  qk_obs_add_term(obs, &term);
+
+  uint32_t layout[3] = {0, 10, 9};  // qubit mapping is: 0->0, 1->10, 2->9
+  uint32_t num_output_qubits = 11;
+  int exit = qk_obs_apply_layout(obs, layout, num_output_qubits);
+  ```
+
+  In a compiler workflow, this function can conveniently be used to apply a `QkTranspileLayout*` obtained from a transpiler pass, called `transpile_layout` in the following example:
+
+  ```c
+  // get the number of output qubits
+  uint32_t num_output_qubits = qk_transpile_layout_num_output_qubits(transpile_layout);
+
+  // get the layout including the ancillas (hence the ``false`` in the function call)
+  uint32_t *layout = malloc(sizeof(uint32_t) * num_output_qubits);
+  qk_transpile_layout_final_layout(transpile_layout, false, layout);
+
+  // apply the layout
+  int exit = qk_obs_apply_layout(obs, layout, num_output_qubits);
+
+  // free the layout array
+  free(layout);
+  ```
+
+  <span id="group__QkObs_1autotoc_md81" />
+
+  #### Safety
+
+  <span id="group__QkObs_1autotoc_md81" />
+
+  Behavior is undefined if `obs` is not a valid, non-null pointer to `QkObs` or if `layout` is not a valid, non-null pointer to a sequence of `qk_obs_num_qubits(obs)` consecutive elements of `uint32_t`.
+
+  **Parameters**
+
+  *   **obs** – A pointer to the observable, this observable will be modified in place upon success. Check the exit code to ensure the layout was correctly applied.
+  *   **layout** – A pointer to the layout. The pointer must point to an array to `qk_obs_num_qubits(obs)` elements of type `uint32_t`. Each element must have values in `[0, num_qubits)`.
+  *   **num\_qubits** – The number of output qubits.
+
+  **Returns**
+
+  An exit code.
+
+  *   `QkExitCode_Success` upon success
+  *   `QkExitCode_DuplicteIndexError` if duplicate qubit indices were found
+  *   `QkExitCode_MismatchedQubits` if `num_qubits` is smaller than the number of qubits in the observable
+  *   `QkExitCode_IndexError` for any other index errors, such as invalid values in `layout`.
+</Function>
+
 ### qk\_obs\_canonicalize
 
 <Function id="qk_obs_canonicalize" signature="QkObs *qk_obs_canonicalize(const QkObs *obs, double tol)">
   Calculate the canonical representation of the observable.
 
-  <span id="group__QkObs_1autotoc_md80" />
+  <span id="group__QkObs_1autotoc_md82" />
 
   #### Example
 
@@ -770,14 +844,14 @@ for (size_t i = 0; i < num_terms; i++) {
   QkObs *two = qk_obs_add(iden, iden);
 
   double tol = 1e-6;
-  QkObs *canonical = qk_obs_canonicalize(two);
+  QkObs *canonical = qk_obs_canonicalize(two, tol);
   ```
 
-  <span id="group__QkObs_1autotoc_md81" />
+  <span id="group__QkObs_1autotoc_md83" />
 
   #### Safety
 
-  <span id="group__QkObs_1autotoc_md81" />
+  <span id="group__QkObs_1autotoc_md83" />
 
   Behavior is undefined `obs` is not a valid, non-null pointer to a `QkObs`.
 
@@ -796,7 +870,7 @@ for (size_t i = 0; i < num_terms; i++) {
 <Function id="qk_obs_copy" signature="QkObs *qk_obs_copy(const QkObs *obs)">
   Copy the observable.
 
-  <span id="group__QkObs_1autotoc_md82" />
+  <span id="group__QkObs_1autotoc_md84" />
 
   #### Example
 
@@ -805,11 +879,11 @@ for (size_t i = 0; i < num_terms; i++) {
   QkObs *copied = qk_obs_copy(original);
   ```
 
-  <span id="group__QkObs_1autotoc_md83" />
+  <span id="group__QkObs_1autotoc_md85" />
 
   #### Safety
 
-  <span id="group__QkObs_1autotoc_md83" />
+  <span id="group__QkObs_1autotoc_md85" />
 
   Behavior is undefined `obs` is not a valid, non-null pointer to a `QkObs`.
 
@@ -829,7 +903,7 @@ for (size_t i = 0; i < num_terms; i++) {
 
   Note that this does not compare mathematical equality, but data equality. This means that two observables might represent the same observable but not compare as equal.
 
-  <span id="group__QkObs_1autotoc_md84" />
+  <span id="group__QkObs_1autotoc_md86" />
 
   #### Example
 
@@ -839,11 +913,11 @@ for (size_t i = 0; i < num_terms; i++) {
   bool are_equal = qk_obs_equal(observable, other);
   ```
 
-  <span id="group__QkObs_1autotoc_md85" />
+  <span id="group__QkObs_1autotoc_md87" />
 
   #### Safety
 
-  <span id="group__QkObs_1autotoc_md85" />
+  <span id="group__QkObs_1autotoc_md87" />
 
   Behavior is undefined if `obs` or `other` are not valid, non-null pointers to `QkObs`\ s.
 
@@ -862,7 +936,7 @@ for (size_t i = 0; i < num_terms; i++) {
 <Function id="qk_obs_str" signature="char *qk_obs_str(const QkObs *obs)">
   Return a string representation of a `QkObs`.
 
-  <span id="group__QkObs_1autotoc_md86" />
+  <span id="group__QkObs_1autotoc_md88" />
 
   #### Example
 
@@ -872,11 +946,11 @@ for (size_t i = 0; i < num_terms; i++) {
   qk_str_free(string);
   ```
 
-  <span id="group__QkObs_1autotoc_md87" />
+  <span id="group__QkObs_1autotoc_md89" />
 
   #### Safety
 
-  <span id="group__QkObs_1autotoc_md87" />
+  <span id="group__QkObs_1autotoc_md89" />
 
   Behavior is undefined `obs` is not a valid, non-null pointer to a `QkObs`.
 
@@ -898,11 +972,11 @@ for (size_t i = 0; i < num_terms; i++) {
 <Function id="qk_str_free" signature="void qk_str_free(char *string)">
   Free a string representation.
 
-  <span id="group__QkObs_1autotoc_md88" />
+  <span id="group__QkObs_1autotoc_md90" />
 
   #### Safety
 
-  <span id="group__QkObs_1autotoc_md88" />
+  <span id="group__QkObs_1autotoc_md90" />
 
   Behavior is undefined if `str` is not a pointer returned by `qk_obs_str` or `qk_obsterm_str`.
 
@@ -916,11 +990,11 @@ for (size_t i = 0; i < num_terms; i++) {
 <Function id="qk_obs_to_python" signature="PyObject *qk_obs_to_python(const QkObs *obs)">
   Convert to a Python-space `SparseObservable`.
 
-  <span id="group__QkObs_1autotoc_md93" />
+  <span id="group__QkObs_1autotoc_md95" />
 
   #### Safety
 
-  <span id="group__QkObs_1autotoc_md93" />
+  <span id="group__QkObs_1autotoc_md95" />
 
   Behavior is undefined if `obs` is not a valid, non-null pointer to a `QkObs`.
 
