--- a/docs/guides/save-jobs.ipynb
+++ b/docs/guides/save-jobs.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -126,9 +126,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<RuntimeJobV2('d38l3pkgenls73cf263g', 'sampler')>,\n",
+       " <RuntimeJobV2('d36s55gitjus73f5li10', 'sampler')>,\n",
+       " <RuntimeJobV2('d36s4mkda4cs73a8994g', 'sampler')>,\n",
+       " <RuntimeJobV2('d36rs9o0sqis73982e4g', 'sampler')>,\n",
+       " <RuntimeJobV2('d36rptsgenls73cda9n0', 'sampler')>,\n",
+       " <RuntimeJobV2('d36rohkgenls73cda87g', 'sampler')>,\n",
+       " <RuntimeJobV2('d36rnr0itjus73f5l4m0', 'sampler')>,\n",
+       " <RuntimeJobV2('d36rnp0itjus73f5l4j0', 'sampler')>,\n",
+       " <RuntimeJobV2('d35f3joitjus73f49ds0', 'sampler')>,\n",
+       " <RuntimeJobV2('d35bsn80sqis7396img0', 'sampler')>]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# List jobs with a specific tag or set of tags\n",
     "\n",
