--- a/docs/guides/save-jobs.ipynb
+++ b/docs/guides/save-jobs.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "ef283f37-0ad4-48c7-bb92-8a09baaae6e5",
    "metadata": {},
    "source": [
     "# Tag, retrieve, and save results"
@@ -9,6 +10,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f4471d6b-dc12-486c-95de-22ac12e367d2",
    "metadata": {
     "tags": [
      "version-info"
@@ -29,13 +31,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ec8277ad-1811-4318-8282-84d6d282bb17",
    "metadata": {},
    "source": [
-    "This guide focuses on best practices in retrieving and managing your job results, so that you can better organize, track, and understand your experiments. "
+    "This guide focuses on best practices in retrieving and managing your job results, so that you can better organize, track, and understand your experiments."
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "59e38320-db15-4566-b262-40d4fcf19b82",
    "metadata": {},
    "source": [
     "## Add and search by job tags\n",
@@ -48,6 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "74a7a1ea-f2ae-4b8c-9499-af52840c2e74",
    "metadata": {},
    "outputs": [
     {
@@ -87,6 +92,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2b29f9da-3fca-4ffc-b4b2-6f0d130b5b23",
    "metadata": {},
    "source": [
     "### Add and update tags\n",
@@ -97,6 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "205ceaf7-f79d-4452-b4b0-9688e39a4564",
    "metadata": {},
    "outputs": [
     {
@@ -117,6 +124,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9e2e8c4a-5fbb-4a15-ab75-ddb61e35b65e",
    "metadata": {},
    "source": [
     "### Retrieve jobs by tag\n",
@@ -127,6 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "b6db503e-46ef-406e-9420-ef73446df564",
    "metadata": {},
    "outputs": [
     {
@@ -157,6 +166,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d32e82e4-331c-43ec-ac86-a657f29f1469",
    "metadata": {},
    "source": [
     "## Retrieve jobs from IBM Quantum\n",
@@ -169,6 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "bd46b47b-e9ff-4da3-9ded-30dd3baee7c0",
    "metadata": {},
    "outputs": [
     {
@@ -197,6 +208,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "418755af-ddf1-4702-9c83-df23d29982f3",
    "metadata": {},
    "source": [
     "You can also select by backend, job state, session, and more. For more information, see [`QiskitRuntimeService.jobs`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#jobs) in the API documentation.\n",
@@ -207,6 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "bd1fc5a5-ad29-4805-91e5-fe70cdbc4540",
    "metadata": {
     "tags": [
      "ignore-warnings"
@@ -234,6 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "850780cc-4c91-4eec-9d46-2b2cbcd9157e",
    "metadata": {},
    "outputs": [
     {
@@ -254,6 +268,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1163070d-7f16-42dc-9951-4cbff79cabf6",
    "metadata": {},
    "source": [
     "<CodeAssistantAdmonition\n",
@@ -266,6 +281,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f3bccdba-29c5-405b-96e2-65f4fe4ffadd",
    "metadata": {},
    "source": [
     "## Save results to disk\n",
@@ -276,6 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "1892f8f7-ff0f-4ed2-bba9-a336c23315af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,6 +305,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8fdddde9-2c05-481b-84c8-d3b7fcf70120",
    "metadata": {},
    "source": [
     "You can then load this array from disk in a separate kernel."
@@ -296,6 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "71d963dd-3b66-4226-be7b-c69bc89af28e",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +341,7 @@
  "metadata": {
   "description": "Use job_id and tags to organize job results, and save results to disk.",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -336,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3"
   },
   "title": "Tag, retrieve, and save results"
  },
