use processor name rather than QPU name

--- a/docs/tutorials/template-for-function-name-tutorial.ipynb
+++ b/docs/tutorials/template-for-function-name-tutorial.ipynb
@@ -15,9 +15,9 @@
    "id": "a6f69b77",
    "metadata": {},
    "source": [
-    "*Usage estimate: \"x\" minutes on ibm_y\" or \"x\" minutes on ibm_z. (NOTE: This is an estimate only. Your runtime may vary.)*\n",
+    "*Usage estimate: \"x\" minutes on processor_name. (NOTE: This is an estimate only. Your runtime may vary.)*\n",
     "> Replace the \"x\" minutes with the actual minute it took to run the code\n",
-    "> Replace \"ibm_y\" and \"ibm_z\" with the actual machine where you run the tutorial."
+    "> Replace processor_name with the processor type of the QPU you used (bird name) to run the tutorial."
    ]
   },
   {
