--- a/docs/guides/local-testing-mode.ipynb
+++ b/docs/guides/local-testing-mode.ipynb
@@ -137,6 +137,10 @@
    "source": [
     "To simulate with noise, specify a QPU (quantum hardware) and submit it to Aer.  Aer builds a noise model based on the calibration data from that QPU, and instantiates an Aer backend with that model.  If you prefer, you can [build a noise model](./build-noise-models).\n",
     "\n",
+    "<Admonition type=\"caution\">\n",
+    "Note that an Aer noise model produces only an approximation of the actual errors, and is likely to be less severe than the noise on a real QPU.\n",
+    "</Admonition>\n",
+    "\n",
     "Example with noise:"
    ]
   },
